# claim-generator

./: README.md  generate_rose_api.py  generate_rose_api_missing.py  generate_rose_kg.py  pyproject.toml  requirements.txt  retrofit_triple_to_claim_prompts.py  retrofit_triples_from_claims.py  test_api.py  test_cli.py
claim_generator/: __init__.py  claim_to_triple_models.py  cli.py  config.py  generator.py  prompts.py  triple_to_claim_models.py  utils.py
claim_generator/kg_pipeline/: __init__.py  config.py  core.py  models.py  utils.py
data/inputs/: rose_datasets_small.json  test_input.json
data/outputs/: remove_clickhere.py  rose_datasets_small_kg_claims_synthetic.json  rose_datasets_small_with_claims.json  test_output.json  validate_datasets.py
